[gd_scene load_steps=6 format=3 uid="uid://chshqo77lq1wk"]

[ext_resource type="Script" path="res://Scripts/Enemy/FireSnake.gd" id="1_2jfgo"]
[ext_resource type="SpriteFrames" uid="uid://b56dytcs0l5uo" path="res://SpriteFrames/FireSnake_SpriteFrames.tres" id="2_cu7oc"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_j5mxx"]
size = Vector2(7, 9)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hcbw4"]
size = Vector2(10, 10)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vxqa2"]
size = Vector2(10, 10)

[node name="FireSnake" type="CharacterBody2D"]
script = ExtResource("1_2jfgo")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -8)
sprite_frames = ExtResource("2_cu7oc")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -4.5)
shape = SubResource("RectangleShape2D_j5mxx")

[node name="DamageArea2D" type="Area2D" parent="."]
position = Vector2(0, -6.5)
collision_layer = 0
collision_mask = 2
monitorable = false

[node name="DamageShape2D" type="CollisionShape2D" parent="DamageArea2D"]
position = Vector2(0, 1.5)
shape = SubResource("RectangleShape2D_hcbw4")

[node name="HitArea2D" type="Area2D" parent="."]
position = Vector2(0, -14.5)
collision_layer = 16
collision_mask = 0
monitoring = false

[node name="HitShape2D" type="CollisionShape2D" parent="HitArea2D"]
position = Vector2(0, 9.5)
shape = SubResource("RectangleShape2D_vxqa2")

[node name="AllowableHitTypes" type="Node" parent="HitArea2D"]

[node name="Projectile" type="Node" parent="HitArea2D/AllowableHitTypes"]

[node name="Tail" type="Node" parent="HitArea2D/AllowableHitTypes"]

[node name="Invincibility" type="Node" parent="HitArea2D/AllowableHitTypes"]

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(0, -8)

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="JumpCooldown" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="JumpTime" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[connection signal="body_entered" from="DamageArea2D" to="." method="_on_damage_area_2d_body_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="JumpCooldown" to="." method="_on_jump_cooldown_timeout"]
